--- a/TaskTracker/TaskTracker/Views/Controls/CarouselItem.xaml
+++ b/TaskTracker/TaskTracker/Views/Controls/CarouselItem.xaml
@@ -2,26 +2,29 @@
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:xForms="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfListView.XForms"
+             xmlns:resources="clr-namespace:TaskTracker.Resources;assembly=TaskTracker"
              x:Class="TaskTracker.Views.Controls.CarouselItem">
-
     <ContentView.Content>
-        <!--<Grid Padding="30,0">
+        <Grid Padding="20,0,20,0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="45"/>
                 <RowDefinition Height="*"/>
+                <RowDefinition Height="45"/>
             </Grid.RowDefinitions>
 
             <Grid Grid.Row="0">
-                <StackLayout x:Name="Header" Orientation="Horizontal">
-                    <Image IsVisible="{Binding IsDeleteIconVisible}" Source="delete.xml"/>
-                    <Label TextColor="Black" HorizontalTextAlignment="Center" Text="{Binding Name}" FontAttributes="Bold" FontSize="Medium" VerticalOptions="Center" HorizontalOptions="Center"/>
-                </StackLayout>
+                <Frame x:Name="Header" Padding="1" BackgroundColor="Transparent">
+                    <StackLayout Orientation="Horizontal" >
+                        <Image IsVisible="False" x:Name="DeleteImage" Source="delete.xml"/>
+                        <Label TextColor="Black" HorizontalTextAlignment="Center" Text="{Binding Name}" FontAttributes="Bold" FontSize="Medium" VerticalOptions="Center" HorizontalOptions="Center"/>
+                    </StackLayout>
+                </Frame>
             </Grid>
 
-            <xForms:SfListView BackgroundColor="#C0E0E0E0" AllowSwiping="True" SelectionMode="None" ItemSize="80" ItemTapped="SfListView_OnItemTapped" ItemDragging="SfListView_OnItemDragging" ItemsSource="{Binding TaskCollection}" DragStartMode="OnHold" ItemSpacing="0,5,0,0" Grid.Row="1" >
+            <xForms:SfListView Grid.Row="1" x:Name="ListView" BackgroundColor="#C0E0E0E0" AllowSwiping="True" SelectionMode="None" ItemSize="80" ItemTapped="SfListView_OnItemTapped" ItemDragging="SfListView_OnItemDragging" ItemsSource="{Binding TaskCollection}" DragStartMode="OnHold" ItemSpacing="0,0,0,5" >
                 <xForms:SfListView.ItemTemplate>
                     <DataTemplate>
-                        <Frame x:Name="frame" BackgroundColor="#EEEEEE" Padding="1" >
+                        <Frame BackgroundColor="#EEEEEE" Padding="1" >
                             <StackLayout HeightRequest="70">
                                 <Label Text="{Binding Name}" TextColor="Black"/>
                             </StackLayout>
@@ -31,7 +34,7 @@
 
                 <xForms:SfListView.DragItemTemplate>
                     <DataTemplate>
-                        <Frame x:Name="frame" BackgroundColor="#32EEEEEE" Padding="1" >
+                        <Frame BackgroundColor="#32EEEEEE" Padding="1" >
                             <StackLayout>
                                 <Label Text="{Binding Name}" TextColor="Black"/>
                             </StackLayout>
@@ -39,6 +42,8 @@
                     </DataTemplate>
                 </xForms:SfListView.DragItemTemplate>
             </xForms:SfListView>
-        </Grid>-->
+
+            <Button Grid.Row="2" Text="{resources:Translate AddNewTask}"/>
+        </Grid>
     </ContentView.Content>
 </ContentView>
