--- a/TaskTracker/TaskTracker/Views/Controls/BoardListItem.xaml
+++ b/TaskTracker/TaskTracker/Views/Controls/BoardListItem.xaml
@@ -2,21 +2,14 @@
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:xForms="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfListView.XForms"
+             xmlns:controls="clr-namespace:TaskTracker.Views.Controls;assembly=TaskTracker"
              x:Class="TaskTracker.Views.Controls.BoardListItem">
     <ContentView.Content>
         <Frame BackgroundColor="#FAFAFA" HasShadow="True" HeightRequest="60" Padding="1" Margin="20,0">
             <StackLayout>
                 <Label HorizontalTextAlignment="Center" Text="{Binding Name}" TextColor="Black"/>
 
-                <xForms:SfListView IsEnabled="False" Orientation="Horizontal" ItemsSource="{Binding AssignedUsers}">
-                    <xForms:SfListView.ItemTemplate>
-                        <DataTemplate >
-                            <Frame HeightRequest="30" WidthRequest="30" CornerRadius="15">
-                                <Image Source="{Binding Image}"/>
-                            </Frame>
-                        </DataTemplate>
-                    </xForms:SfListView.ItemTemplate>
-                </xForms:SfListView>
+                <controls:AssignedUsersListView ItemsSource="{Binding AssignedUsers}" IsEnabled="false"/>
             </StackLayout>
         </Frame>
     </ContentView.Content>
