--- a/TaskTracker/TaskTracker/Views/Controls/CarouselItem.xaml
+++ b/TaskTracker/TaskTracker/Views/Controls/CarouselItem.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:xForms="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfListView.XForms"
              xmlns:resources="clr-namespace:TaskTracker.Resources;assembly=TaskTracker"
+             xmlns:controls="clr-namespace:TaskTracker.Views.Controls;assembly=TaskTracker"
              x:Class="TaskTracker.Views.Controls.CarouselItem">
     <ContentView.Content>
         <Grid Padding="20,0,20,0">
@@ -27,6 +28,7 @@
                         <Frame BackgroundColor="#EEEEEE" Padding="1" >
                             <StackLayout HeightRequest="70">
                                 <Label Text="{Binding Name}" TextColor="Black"/>
+                                <controls:AssignedUsersListView ItemsSource="{Binding }"/>
                             </StackLayout>
                         </Frame>
                     </DataTemplate>
