--- a/TaskTracker/TaskTracker/Views/Controls/BoardListItem.xaml
+++ b/TaskTracker/TaskTracker/Views/Controls/BoardListItem.xaml
@@ -8,11 +8,11 @@
             <StackLayout>
                 <Label HorizontalTextAlignment="Center" Text="{Binding Name}" TextColor="Black"/>
 
-                <xForms:SfListView Orientation="Horizontal" ItemsSource="{Binding AssignedUsers}" IsEnabled="false" Margin="10,0,0,10">
+                <xForms:SfListView Orientation="Horizontal" ItemsSource="{Binding AssignedUsers}" ItemSpacing="5" IsEnabled="false" Margin="10,0,0,10">
                     <xForms:SfListView.ItemTemplate>
                         <DataTemplate >
-                            <Frame CornerRadius="10" Padding="1" BackgroundColor="Transparent">
-                                <Image HeightRequest="20" WidthRequest="20" Source="{Binding Image}"/>
+                            <Frame HeightRequest="20" WidthRequest="20" CornerRadius="20" Padding="1" BackgroundColor="LightBlue">
+                                <Image Scale="0.7" Source="{Binding Image}"/>
                             </Frame>
                         </DataTemplate>
                     </xForms:SfListView.ItemTemplate>
