--- a/TaskTracker/TaskTracker/Views/Controls/CarouselItem.xaml
+++ b/TaskTracker/TaskTracker/Views/Controls/CarouselItem.xaml
@@ -3,50 +3,81 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:xForms="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfListView.XForms"
              xmlns:resources="clr-namespace:TaskTracker.Resources;assembly=TaskTracker"
-             x:Class="TaskTracker.Views.Controls.CarouselItem">
+             xmlns:popupLayout="clr-namespace:Syncfusion.XForms.PopupLayout;assembly=Syncfusion.SfPopupLayout.XForms"
+             x:Class="TaskTracker.Views.Controls.CarouselItem"
+             BindingContextChanged="CarouselItem_OnBindingContextChanged">
     <ContentView.Content>
-        <Grid Padding="20,0,20,0">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="45"/>
-                <RowDefinition Height=".8*"/>
-                <RowDefinition Height="45"/>
-            </Grid.RowDefinitions>
 
-            <Grid Grid.Row="0">
-                <Frame x:Name="Header" Padding="1" BackgroundColor="Transparent">
-                    <StackLayout Orientation="Horizontal" >
-                        <Image IsVisible="False" x:Name="DeleteImage" Source="delete.xml"/>
-                        <Label TextColor="Black" HorizontalTextAlignment="Center" Text="{Binding Name}" FontAttributes="Bold" FontSize="Medium" VerticalOptions="Center" HorizontalOptions="Center"/>
-                    </StackLayout>
-                </Frame>
-            </Grid>
+        <popupLayout:SfPopupLayout x:Name="AddNewTaskPopup">
 
-            <xForms:SfListView Grid.Row="1" x:Name="ListView" BackgroundColor="#C0E0E0E0" AllowSwiping="True" SelectionMode="None" ItemSize="80" ItemTapped="SfListView_OnItemTapped" ItemDragging="SfListView_OnItemDragging" ItemsSource="{Binding TaskCollection, UpdateSourceEventName=PropertyChanged, Mode=TwoWay}" DragStartMode="OnHold" ItemSpacing="0,0,0,5" >
-                <xForms:SfListView.ItemTemplate>
-                    <DataTemplate>
-                        <Frame BackgroundColor="#EEEEEE" Padding="1" >
-                            <StackLayout HeightRequest="70" Orientation="Vertical">
-                                <Label Text="{Binding Name}" TextColor="Black"/>
-                                <Frame CornerRadius="10" Padding="1" BackgroundColor="Transparent">
-                                    <Image HeightRequest="20" WidthRequest="20" Source="{Binding AssignedUser.Image}"/>
+            <popupLayout:SfPopupLayout.Content>
+
+                <Grid Padding="20,0,20,0">
+
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="45"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+
+                    <Grid Grid.Row="0">
+                        <Frame x:Name="Header" Padding="1" BackgroundColor="Transparent">
+                            <StackLayout Orientation="Horizontal" >
+                                <Image IsVisible="False" x:Name="DeleteImage" Source="delete.xml"/>
+                                <Label TextColor="Black" HorizontalTextAlignment="Center" Text="{Binding Name}" FontAttributes="Bold" FontSize="Medium" VerticalOptions="Center" HorizontalOptions="Center"/>
+                            </StackLayout>
+                        </Frame>
+                    </Grid>
+
+                    <xForms:SfListView Grid.Row="1" x:Name="ListView" BackgroundColor="#C0E0E0E0" AllowSwiping="True" SelectionMode="None" ItemSize="80" ItemTapped="SfListView_OnItemTapped" ItemDragging="SfListView_OnItemDragging" ItemsSource="{Binding TaskCollection, UpdateSourceEventName=PropertyChanged, Mode=TwoWay}" DragStartMode="OnHold" ItemSpacing="0,0,0,5" >
+                        <xForms:SfListView.ItemTemplate>
+                            <DataTemplate>
+                                <Frame BackgroundColor="#EEEEEE" Padding="1" >
+                                    <StackLayout HeightRequest="70" Orientation="Vertical">
+                                        <Label Text="{Binding Name}" TextColor="Black"/>
+                                        <Frame CornerRadius="10" Padding="1" BackgroundColor="Transparent">
+                                            <Image HeightRequest="20" WidthRequest="20" Source="{Binding AssignedUser.Image}"/>
+                                        </Frame>
+                                    </StackLayout>
                                 </Frame>
-                            </StackLayout>
-                        </Frame>
-                    </DataTemplate>
-                </xForms:SfListView.ItemTemplate>
+                            </DataTemplate>
+                        </xForms:SfListView.ItemTemplate>
 
-                <xForms:SfListView.DragItemTemplate>
-                    <DataTemplate>
-                        <Frame BackgroundColor="#32EEEEEE" Padding="1" >
-                            <StackLayout>
-                                <Label Text="{Binding Name}" TextColor="Black"/>
-                            </StackLayout>
-                        </Frame>
-                    </DataTemplate>
-                </xForms:SfListView.DragItemTemplate>
-            </xForms:SfListView>
+                        <xForms:SfListView.DragItemTemplate>
+                            <DataTemplate>
+                                <Frame BackgroundColor="#32EEEEEE" Padding="1" >
+                                    <StackLayout>
+                                        <Label Text="{Binding Name}" TextColor="Black"/>
+                                        <Frame CornerRadius="10" Padding="1" BackgroundColor="Transparent">
+                                            <Image HeightRequest="20" WidthRequest="20" Source="{Binding AssignedUser.Image}"/>
+                                        </Frame>
+                                    </StackLayout>
+                                </Frame>
+                            </DataTemplate>
+                        </xForms:SfListView.DragItemTemplate>
 
-            <Button Grid.Row="2" Text="{resources:Translate AddNewTask}"/>
-        </Grid>
+                        <xForms:SfListView.FooterTemplate>
+                            <DataTemplate>
+                                <Button HeightRequest="45" Command="{Binding AddTaskCommand}" Text="{resources:Translate AddNewTask}"></Button>
+                            </DataTemplate>
+                        </xForms:SfListView.FooterTemplate>
+                    </xForms:SfListView>
+                </Grid>
+
+            </popupLayout:SfPopupLayout.Content>
+
+            <popupLayout:SfPopupLayout.PopupView>
+                <popupLayout:PopupView AppearanceMode="TwoButton" AcceptButtonText="{resources:Translate Accept}" DeclineButtonText="{resources:Translate Cancel}" AcceptCommand="{Binding ConfirmPopupCommand}" HeaderTitle="{resources:Translate AddNewTask}" HeightRequest="150">
+                    <popupLayout:PopupView.ContentTemplate>
+                        <DataTemplate>
+                            <Grid>
+                                <Entry Text="{Binding NewTaskName, Mode=TwoWay}" Placeholder="{resources:Translate TaskName}" Keyboard="Text" TextColor="Black" HeightRequest="50"/>
+                            </Grid>
+                        </DataTemplate>
+                    </popupLayout:PopupView.ContentTemplate>
+                </popupLayout:PopupView>
+            </popupLayout:SfPopupLayout.PopupView>
+
+        </popupLayout:SfPopupLayout>
+
     </ContentView.Content>
 </ContentView>
