--- a/TaskTracker/TaskTracker/Views/Controls/CarouselItem.xaml
+++ b/TaskTracker/TaskTracker/Views/Controls/CarouselItem.xaml
@@ -2,42 +2,28 @@
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:xForms="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfListView.XForms"
-             xmlns:resources="clr-namespace:TaskTracker.Resources;assembly=TaskTracker"
+             xmlns:resources="clr-namespace:TaskTracker.Resources"
              xmlns:popupLayout="clr-namespace:Syncfusion.XForms.PopupLayout;assembly=Syncfusion.SfPopupLayout.XForms"
-             x:Class="TaskTracker.Views.Controls.CarouselItem"
-             BindingContextChanged="CarouselItem_OnBindingContextChanged">
+             xmlns:converters="clr-namespace:TaskTracker.Converters"
+             BindingContextChanged="CarouselItem_OnBindingContextChanged"
+             x:Class="TaskTracker.Views.Controls.CarouselItem">
+
+    <ContentView.Resources>
+        <converters:BoolNegateConverter x:Key="NegateConverter"/>
+    </ContentView.Resources>
+
     <ContentView.Content>
+        <Grid>
+            <popupLayout:SfPopupLayout x:Name="AddNewTaskPopup">
 
-        <popupLayout:SfPopupLayout x:Name="AddNewTaskPopup">
+                <popupLayout:SfPopupLayout.Content>
 
-            <popupLayout:SfPopupLayout.Content>
-
-                <Grid Padding="20,0,20,0">
-
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="45"/>
-                        <RowDefinition Height="Auto"/>
-                    </Grid.RowDefinitions>
-
-                    <Grid Grid.Row="0">
-                        <Frame x:Name="Header" Padding="1" BackgroundColor="Transparent">
-                            <StackLayout Orientation="Horizontal" >
-                                <Image IsVisible="False" x:Name="DeleteImage" Source="delete.xml"/>
-                                <Label TextColor="Black" HorizontalTextAlignment="Center" Text="{Binding Name}" FontAttributes="Bold" FontSize="Medium" VerticalOptions="Center" HorizontalOptions="Center"/>
-                            </StackLayout>
-                        </Frame>
-                    </Grid>
-
-                    <xForms:SfListView Grid.Row="1" x:Name="ListView" BackgroundColor="#C0E0E0E0" SelectionMode="None"
-                                       ItemSize="80" ItemTapped="SfListView_OnItemTapped" ItemDragging="SfListView_OnItemDragging" 
-                                       ItemsSource="{Binding TaskCollection, UpdateSourceEventName=PropertyChanged, Mode=TwoWay}" 
-                                       DragStartMode="OnHold" ItemSpacing="0,0,0,5" >
-
+                    <xForms:SfListView ItemsSource="{Binding TaskCollection}" ItemSize="80" DragStartMode="OnHold" ItemSpacing="0,0,0,5" IsStickyFooter="True" IsStickyHeader="True">
                         <xForms:SfListView.ItemTemplate>
                             <DataTemplate>
-                                <FlexLayout Margin="5,0,0,5" BackgroundColor="#EEEEEE" AlignItems="Start" JustifyContent="SpaceBetween" Direction="Column">
-                                    <Label Text="{Binding Name}" TextColor="Black"/>
-
+                                <FlexLayout Padding="5,5,5,5" AlignItems="Start" JustifyContent="SpaceBetween" Direction="Column" BackgroundColor="#FAFAFA">
+                                    <Label TextColor="Black" Text="{Binding Name}"/>
+                                    <BoxView HeightRequest="1" HorizontalOptions="CenterAndExpand" Color="#616161"/>
                                     <Frame HeightRequest="30" WidthRequest="30" CornerRadius="15" Padding="1" BackgroundColor="LightBlue">
                                         <Image Scale="0.7" Source="{Binding AssignedUser.Image}"/>
                                     </Frame>
@@ -45,41 +31,39 @@
                             </DataTemplate>
                         </xForms:SfListView.ItemTemplate>
 
-                        <xForms:SfListView.DragItemTemplate>
+                        <xForms:SfListView.HeaderTemplate>
                             <DataTemplate>
-                                <FlexLayout BackgroundColor="#32EEEEEE" >
-                                    <Label Text="{Binding Name}" TextColor="Black"/>
-
-                                    <Frame HeightRequest="20" WidthRequest="20" CornerRadius="20" Padding="1" BackgroundColor="LightBlue">
-                                        <Image Scale="0.7" Source="{Binding AssignedUser.Image}"/>
-                                    </Frame>
-                                </FlexLayout>
+                                <Frame x:Name="Header" Padding="1" BackgroundColor="Transparent">
+                                    <StackLayout Orientation="Horizontal" >
+                                        <Image IsVisible="False" x:Name="DeleteImage" Source="delete.xml"/>
+                                        <Label TextColor="Black" HorizontalTextAlignment="Center" Text="{Binding Name}" FontAttributes="Bold" FontSize="Medium" VerticalOptions="Center" HorizontalOptions="Center"/>
+                                    </StackLayout>
+                                </Frame>
                             </DataTemplate>
-                        </xForms:SfListView.DragItemTemplate>
+                        </xForms:SfListView.HeaderTemplate>
 
                         <xForms:SfListView.FooterTemplate>
                             <DataTemplate>
-                                <Button HeightRequest="45" Command="{Binding AddTaskCommand}" Text="{resources:Translate AddNewTask}"></Button>
+                                <Button HeightRequest="45" Command="{Binding AddTaskCommand}" Text="{resources:Translate AddNewTask}"/>
                             </DataTemplate>
                         </xForms:SfListView.FooterTemplate>
                     </xForms:SfListView>
-                </Grid>
 
-            </popupLayout:SfPopupLayout.Content>
+                </popupLayout:SfPopupLayout.Content>
 
-            <popupLayout:SfPopupLayout.PopupView>
-                <popupLayout:PopupView AppearanceMode="TwoButton" AcceptButtonText="{resources:Translate Accept}" DeclineButtonText="{resources:Translate Cancel}" AcceptCommand="{Binding ConfirmPopupCommand}" HeaderTitle="{resources:Translate AddNewTask}" HeightRequest="150">
-                    <popupLayout:PopupView.ContentTemplate>
-                        <DataTemplate>
-                            <Grid>
-                                <Entry Text="{Binding NewTaskName, Mode=TwoWay}" Placeholder="{resources:Translate TaskName}" Keyboard="Text" TextColor="Black" HeightRequest="50"/>
-                            </Grid>
-                        </DataTemplate>
-                    </popupLayout:PopupView.ContentTemplate>
-                </popupLayout:PopupView>
-            </popupLayout:SfPopupLayout.PopupView>
+                <popupLayout:SfPopupLayout.PopupView>
+                    <popupLayout:PopupView AppearanceMode="TwoButton" AcceptButtonText="{resources:Translate Accept}" DeclineButtonText="{resources:Translate Cancel}" AcceptCommand="{Binding ConfirmPopupCommand}" HeaderTitle="{resources:Translate AddNewTask}" HeightRequest="150">
+                        <popupLayout:PopupView.ContentTemplate>
+                            <DataTemplate>
+                                <Grid>
+                                    <Entry Text="{Binding NewTaskName, Mode=TwoWay}" Placeholder="{resources:Translate TasakName}" Keyboard="Text" TextColor="Black" HeightRequest="50"/>
+                                </Grid>
+                            </DataTemplate>
+                        </popupLayout:PopupView.ContentTemplate>
+                    </popupLayout:PopupView>
+                </popupLayout:SfPopupLayout.PopupView>
 
-        </popupLayout:SfPopupLayout>
-
+            </popupLayout:SfPopupLayout>
+        </Grid>
     </ContentView.Content>
 </ContentView>
